# analyze

./: .cproject  .project  CMakeLists.txt  energyxxx.cmd  fft-.2.cfg  fft-2-c.cfg  fft-2-l.cfg  fft-20-c.cfg  fft-200-c.cfg  fft-c.cfg  fft-l.cfg  fft-l2-20k.cfg  fft-test.cfg  fft.cfg  generate.pl  gpenv  measure.cmd  mova.pl  room.cfg  roomscan.cfg  setup.cfg  sp  sweep.cfg  sweep2.cmd  viewfft  viewfft..2  viewfft.2  viewfft.raw  viewfft2  zero
Statistik/: addc2.pl  calcdist.cmd  energyall.cmd  energydist.pl  energyxxx.cmd  intgrid.cmd  intgrid.pl  merge.pl  pE  pE2  pE2b  pE2d  pE2l  pE2m
doc/: analyze.html  calibration.html  examples.html  fileformat.html  glossary.html  index.html  measure.html  mls.html  mm.css  noise.html  parameter.html  sampledist.html  sweep.html  usage.html
doc/images/.internal/: Bilder.cdr  Bilder.xar
doc/images/src/: Bilder.cdr
sample/: .gitignore  analyze  calibrate-zero-verify.sh  calibrate-zero.sh  calibrate.cfg  calibrate2-verify.sh  calibrate2.cfg  calibrate2.sh  calibrate3-verify.sh  calibrate3.cfg  calibrate3.sh  fft-.2-c.cfg  fft-.2-l.cfg  fft-.2.cfg  fft-2-c.cfg  fft-2-l.cfg  fft-2.cfg  fft-20-c.cfg  fft-20-l.cfg  fft-20.cfg  fft-200-c.cfg  fft-200.cfg  fft-20k-c.cfg  fft-20k-l.cfg  fft-20k.cfg  fft-2k-c.cfg  fft-2k.cfg  fft-c.cfg  fft-l-20k.cfg  fft-l.cfg  fft-l2-20k.cfg  fft-l2.cfg  fft-l3.cfg  fft-test.cfg  fft.cfg  file  gpenv  hyst.cfg  in  log  (+29 more)
src/: CMakeLists.txt  Makefile  analyze.cpp  analyze.h  analyzein.cpp  analyzeout.cpp  config.h  fft.cpp  filereader.cpp  filereader.h  interpolation.cpp  interpolation.h  make.cmd  mathx.h  mls.cpp  moment.cpp  moment.h  noise.cpp  nrc.cpp  nrc.h  parser.cpp  parser.h  pca.h  pcminput.cpp  pcmio.h  pcmoutput.cpp  ref.cpp  sampledist.cpp  sweep.cpp  test.cpp  unique_array.h  utils.cpp  utils.h
test/: CMakeLists.txt  datacheck.pl  harmonics.cpp  moment.cpp
